CSS fix: Content column not centered on IE

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -12,7 +12,7 @@
     }
 
     @include media-query(desk) {
-        max-width: none;
+        max-width: $content-width + $sidebar-width;
     }
 }
 
